--- a/main.css
+++ b/main.css
@@ -61,7 +61,9 @@ header{position: relative;}
 }
 
 /*----------OFFCANVAS---------*/
-
+#sobsan-offcanvas{
+    z-index: 9999;
+}
 .off-header-link{
     width: 35px;
     height: 35px;
@@ -362,7 +364,7 @@ footer .fb-left a{text-decoration: none;color: #ED3237;}
     display: flex;
     flex-direction: column;
     align-items: flex-end;
-    z-index: 9999;
+    z-index: 999;
 }
 .card-qaynar-xett{
     background-color: #ED3237;
