--- a/main.css
+++ b/main.css
@@ -376,14 +376,21 @@ footer .fb-left a{text-decoration: none;color: #ED3237;}
 .card-qaynar-xett a{
     color: #fff;
     text-decoration: none;
-    font-size: 1.3rem;
+    font-size: 1.1rem;
     font-weight: 500;
 }
 .card-qaynar-xett a i{
-    font-size: 1.8rem;
+    font-size: 1.4rem;
     padding-right: 10px;
 }
-
+@media only screen and (min-width:992px){
+    .card-qaynar-xett a{
+        font-size: 1.4rem;
+    }
+    .card-qaynar-xett a i{
+        font-size: 1.8rem;
+    }
+}
 .card-items .card-item{
     background-color: #fff;
     box-shadow: 0 0 5px rgba(0,0,0,0.4);
@@ -392,7 +399,7 @@ footer .fb-left a{text-decoration: none;color: #ED3237;}
     margin: 7px 0;
     width: 200px;
     z-index: 999;
-    transform: translateX(130px);
+    transform: translateX(140px);
     
 }
 .show-page-card-item{animation: show-page-card-item 0.7s ease forwards;}
@@ -406,7 +413,6 @@ footer .fb-left a{text-decoration: none;color: #ED3237;}
     display: flex;
     justify-content: center;
     align-items: center;
-    margin: 0 5px;
     margin-right: 15px;
 }
 .card-items .card-icon i {
@@ -428,6 +434,7 @@ footer .fb-left a{text-decoration: none;color: #ED3237;}
     text-decoration: none;
     color: #fff;
     font-size: 1rem;
+    font-weight: 500;
 }
 .card-items .card-label{
     font-size: 1.6rem;
@@ -548,6 +555,7 @@ footer .fb-left a{text-decoration: none;color: #ED3237;}
     }
 }
 
+
 .swiper-bottom-part{
     background-color: rgb(186, 34, 34);
     background: linear-gradient(to bottom,rgb(186, 34, 34),#ed3237);
@@ -573,4 +581,163 @@ footer .fb-left a{text-decoration: none;color: #ED3237;}
     color: #fff;
     font-size: 1.6rem;
     padding: 0 8px;
+}
+.product-swiper h3{
+    font-size: 2.6rem;
+    padding: 20px 0;
+}
+.main-swiper-3{
+    width: 100%;
+}
+.main-swiper-3 .swiper-slide{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.sobsan-product-card{
+    width: 80%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 10px;
+    border: 1px solid rgba(0,0,0,0.1);
+    border-radius: 4px;
+    cursor: pointer;
+}
+@media only screen and (min-width:768px){
+    .sobsan-product-card{
+        width: 100%;
+    }
+}
+.sobsan-product-card .spc-header{
+    align-self: flex-start;
+    padding: 10px 0 0;
+}
+.sobsan-product-card .spc-header .badge{
+    background-color: #FFA300;
+    color: #fff;
+    font-size: 1rem;
+    padding: 8px;
+}
+.sobsan-product-card .spc-body{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 10px;
+}
+.sobsan-product-card .spc-body .spc-image{
+    width: 100%;
+    height: 200px;
+}
+.sobsan-product-card .spc-body .spc-image img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+.sobsan-product-card .spc-body .spc-info{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 10px 0;
+    text-align: center;
+}
+.sobsan-product-card .spc-body .spc-info .brand{
+    font-size: 1.4rem;
+    color: #969696;
+}
+.sobsan-product-card .spc-body .spc-info .name{
+    font-size: 1.8rem;
+    padding: 7px 0;
+}
+.sobsan-product-card .spc-body .spc-info .description{
+    font-size: 1.4rem;
+    color: #969696;
+    line-height: 1.4rem;
+    height: 70px;
+}
+.sobsan-product-card .spc-body .spc-info .anbar-value{
+    font-size: 1.6rem;
+    color: #969696;
+}
+.sobsan-product-card .spc-body .spc-info .price{
+    font-size: 2rem;
+    color: #ed3237;
+    font-weight: 600;
+}
+.sobsan-product-card .spc-body .spc-info .anbar-value .correct{
+    border-radius: 50%; 
+    width: 20px;
+    height: 20px;
+    display: inline-block;
+    font-size: 1.4rem;  
+    background-color: #80E895;
+    color: #fff;
+}
+
+.spc-footer{
+    width: 80%;
+    display: flex;
+    flex-direction: column;
+    padding: 10px 0;
+}
+.spc-footer .sebet-btn{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 15px;
+    font-size: 1.8rem;
+    font-weight: 500;
+    background-color: #ed3237;
+    color: #fff;
+    border-radius: 6px;
+    cursor: pointer;
+    transition: 0.3s;
+}
+.spc-footer .sebet-btn:hover{
+    background-color: #4BB543;
+}
+.spc-footer .muqayise-btn{
+    padding: 15px;
+    flex-grow: 1;
+    background-color: #fff;
+    box-shadow: 0 0 5px rgba(0,0,0,0.2);
+    font-size: 1.6rem;
+    border-radius: 6px;
+}
+.spc-footer .muqayise-btn i{
+    color: #ed3237;
+    padding: 0 5px;
+}
+.spc-footer .muqayise-btn span{
+    transition: 0.3s;
+}
+.spc-footer .muqayise-btn:hover span{
+    color: #ed3237;
+}
+.spc-footer .favorite-btn{
+    padding: 15px;
+    background-color: #fff;
+    box-shadow: 0 0 5px rgba(0,0,0,0.2);
+    font-size: 1.6rem;
+    border-radius: 6px;
+    color: #ed3237;
+    margin: 0 7px;
+}
+
+.shadow-effect-green{animation: shadow-effect-green 1s ease infinite;}
+@keyframes shadow-effect-green {
+    0% {
+        -webkit-box-shadow: 0 0 0 0 rgba(75, 181, 67, 0.75);
+        box-shadow: 0 0 0 0 rgba(75, 181, 67, 0.75);
+    }
+
+    80% {
+        -webkit-box-shadow: 0 0 0 10px rgba(255, 134, 134, 0);
+        box-shadow: 0 0 0 10px rgba(255, 134, 134, 0);
+    }
+
+    100% {
+        -webkit-box-shadow: 0 0 0 0 rgba(255, 134, 134, 0);
+        box-shadow: 0 0 0 0 rgba(255, 134, 134, 0);
+    }
 }
