--- a/main.css
+++ b/main.css
@@ -588,6 +588,13 @@ footer .fb-left a{text-decoration: none;color: #ED3237;}
 }
 .main-swiper-3{
     width: 100%;
+    padding: 40px 0;
+}
+.main-swiper-3 .swiper-pagination{
+    bottom: 0;
+}
+.main-swiper-3 .swiper-pagination-bullet-active{
+    background-color: #ed3237;
 }
 .main-swiper-3 .swiper-slide{
     display: flex;
@@ -603,6 +610,11 @@ footer .fb-left a{text-decoration: none;color: #ED3237;}
     border: 1px solid rgba(0,0,0,0.1);
     border-radius: 4px;
     cursor: pointer;
+    transition: 0.3s;
+}
+.sobsan-product-card:hover{
+    transform: translateY(-10px);
+    box-shadow: 0 0 5px rgba(0,0,0,0.2);
 }
 @media only screen and (min-width:768px){
     .sobsan-product-card{
@@ -724,7 +736,7 @@ footer .fb-left a{text-decoration: none;color: #ED3237;}
     margin: 0 7px;
 }
 
-.shadow-effect-green{animation: shadow-effect-green 1s ease infinite;}
+.shadow-effect-green{animation: shadow-effect-green 1s ease;}
 @keyframes shadow-effect-green {
     0% {
         -webkit-box-shadow: 0 0 0 0 rgba(75, 181, 67, 0.75);
@@ -740,4 +752,80 @@ footer .fb-left a{text-decoration: none;color: #ED3237;}
         -webkit-box-shadow: 0 0 0 0 rgba(255, 134, 134, 0);
         box-shadow: 0 0 0 0 rgba(255, 134, 134, 0);
     }
+}
+
+.room-section{
+    animation: change-bg-color 15s linear infinite;
+}
+@keyframes change-bg-color{
+    0%{background-color: #FFA900;}
+    50%{background-color: #F75233;}
+    100%{background-color: #FFA900;}
+}
+.room-section h3{
+    font-size: 2.8rem;
+    color: #fff;
+    padding: 20px 0;
+}
+.room-wrap{
+    padding: 0 7px;
+    cursor: pointer;
+    margin: 15px 0;
+}
+.room-wrap .room-image{
+    width: 100%;
+    height: 300px;
+    transition: 0.3s;
+    position: relative;
+}
+.room-wrap .room-image img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+.room-wrap .room-image .black-box{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: transparent;
+    color: #fff;
+    font-size: 2rem;
+    font-weight: 500;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transition: 0.3s;
+}
+.room-wrap .room-image .black-box span{
+    transform: translateY(120px);
+    opacity: 0;
+    transition: 0.3s;
+}
+
+.room-wrap .room-text span:nth-child(1){
+    font-size: 1.2rem;
+    color: rgba(255,255,255,0.7);
+}
+.room-wrap .room-text span:nth-child(2){
+    font-size: 1.8rem;
+    color: #fff;
+    font-weight: 500;
+}
+.room-wrap .room-text span{
+    transition: 0.3s;
+}
+.room-wrap:hover .room-image{
+    transform: scale(0.9);
+}
+.room-wrap:hover .room-image .black-box{
+    background-color: rgba(0,0,0,0.7);
+}
+.room-wrap:hover .room-image .black-box span{
+    opacity: 1;
+    transform: translateY(0);
+}
+.room-wrap:hover .room-text span{
+    transform: translateX(50px);
 }
