--- a/main.css
+++ b/main.css
@@ -905,7 +905,7 @@ footer .fb-left a{text-decoration: none;color: #ED3237;}
 
 .catalog-color-image{
     width: 100%;
-    height: 170px;
+    height: 100px;
 }
 .catalog-color-image img{
     width: 100%;
@@ -916,11 +916,12 @@ footer .fb-left a{text-decoration: none;color: #ED3237;}
 .color-name{
     display: flex;
     flex-direction: column;
-    padding: 10px 18px;
-    font-size: 1.4rem;
+    padding: 10px 0;
+    font-size: 1rem;
     font-weight: 500;
     border-radius: 0 0 20px 20px;
     background-color: #fff;
+    text-align: center;
 }
 .color-alt-panel{background-color: #EFEFEF;width: 100%; padding: 20px 0;}
 
@@ -945,7 +946,10 @@ footer .fb-left a{text-decoration: none;color: #ED3237;}
         border-radius: 30px 30px 0 0;
     }
     .color-name{
+        padding: 10px 18px;
+        font-size: 1.4rem;
         border-radius: 0 0 30px 30px;
+        text-align: start;
     }
     
     .color-version{
